--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@
 <div class="container">
 	<div class="row">
 
-    	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="mouse" >
+    	<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12" id="mouse" >
 		<h2> Tracking Mouse</h2>
 		<p><strong> Mouse X Cordinate: </strong> <span id="x"> X cordinate here </span></p>
 		<p><strong> Mouse y Cordinate: </strong> <span id="y"> y cordinate here </span></p>
 
 				<p><strong id="touch">   </strong></p>
     	</div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="window">
+        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12" id="window">
         <h2> Window Size</h2>
         <p><strong>window Width:</strong><span id="width"> change when resized</span></p>
 		<p><strong>window Height:</strong><span id="height"> change when resized</span></p>
 		</div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="key">
+        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12" id="key">
         <h2>Key Press</h2>
         <p><strong> I bet I can guess what key you pressed!</strong> <span id="keypress">  </span></p>
 				<h4 id="srt"><strong> I just sorted your words</strong> </h4>
 				<p id="sorted"> </p>
 				</div>
-    	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="butt" >
+    	<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12" id="butt" >
         <h2> Buttons </h2>
         <button id="hideW"> Hide window size </button>
 				<br>
@@ -80,19 +80,24 @@
         <button id="square">Square root</button>
         <button id="sort">Sort Names</button>
 				<button id="time">Get Time Stamp</button>
+				<button id="current">Time</button>
 				    </div>
 
-            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="math">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" id="math">
             <h1> Math</h1>
-            <p> Your number multplied by two is <span id="timesTwo"> </span></p>
+            <p> <span id="timesTwo"> </span></p>
   				<br>
   			<p id="bytwo"> </p>
             <p id="squareRoot"> </p>
 
             </div>
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="timestamp">
+						<div class="col-lg-4 col-md-4col-sm-12 col-xs-12" id="timestamp">
 							<h2> Time Stamp</h2>
 							<p> Time since january 1, 1970:  <span id="stamp"> </span> milliseconds</p>
+						</div>
+						<div class="col-lg-4 col-md-4col-sm-12 col-xs-12" id="ctime">
+						<h2> Current time </h2>
+							<p id="printTime"> </p>
 						</div>
 </div>
 </div>
